--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,7 @@
+table tr td a{
+    text-decoration: none;
+}
+
 @media screen and (min-width: 1681px){
     .page-padding{
         padding-left: 16rem;
