--- a/templates/base.html
+++ b/templates/base.html
@@ -14,18 +14,15 @@
 <body>
     <nav class="page-padding navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Tunnel Monitor</a>
+            <a class="navbar-brand" href="{% url 'index' %}">Tunnel Monitor</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link active" href="{% url 'index' %}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
+                    </li> -->
                 </ul>
                 {% if user.is_authenticated %}
                 <span class="nav-item text-light px-3">Logged in as <b>{{ user.get_username }}</b></span>
@@ -48,7 +45,7 @@
         </div>
     </nav>
 
-    <div class="container page-padding py-5">
+    <div class="container py-3">
         {% block content %}{% endblock %}
     </div>
     
