--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
+    {% block head %}{% endblock %}
+
     <title>{% block title %}{% endblock %} | Tunnel Monitor</title>
 </head>
 <body>
@@ -48,6 +50,8 @@
     <div class="container py-3">
         {% block content %}{% endblock %}
     </div>
+
+    {% block body %}{% endblock %}
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
